# BMSTU-10-sem-Compiler-Building

copcode/CD/: .gitignore
copcode/CD/lab01/docs/: report.tex
copcode/CD/lab01/src/: Ast.cpp  Ast.h  AstNode.h  CMakeLists.txt  CharReader.cpp  CharReader.h  Dfa.cpp  Dfa.h  Graphviz.cpp  Nfa.cpp  Nfa.h  RecursiveDescentParser.cpp  RecursiveDescentParser.h  Types.h  main.cpp
copcode/CD/lab02/docs/: report.tex
copcode/CD/lab02/src/: CMakeLists.txt  ContextFreeGrammar.cpp  ContextFreeGrammar.h  main.cpp
copcode/CD/lab03/docs/: report.tex
copcode/CD/lab03/src/: CMakeLists.txt  grammar.txt  main.cpp  parser.cpp  tree.dot
copcode/CD/lab04/docs/: report.tex
copcode/CD/lab04/src/: CMakeLists.txt  main.cpp  parser.cpp
copcode/KaKA/lab_01/source/: main.py
copcode/KaKA/lab_02/data/: example.txt  left_recursion_4.txt  result.txt
copcode/KaKA/lab_02/source/: color.py  (+2 more)
copcode/KaKA/lab_04/: README.md
copcode/bmstu_cc/: README.md
copcode/bmstu_cc/compiler14/: dfa.py  main.py  miniDfa.gv  miniDfa.txt  nfa.py
copcode/bmstu_cc/compiler34/: README.md  chain_rules413.txt  chain_rules423.txt  expression.py  grammar4.txt  grammar41.txt  grammar42.txt  graph.py  graph_expr.gv  graph_expr1.gv  graph_prog.gv  graph_prog1.gv  graph_prog2.gv  graph_prog21.gv  input_grammar41.txt  input_grammar42.txt  main.py  output_grammar413.txt  output_grammar423.txt  preprocessTXT.py  print411.txt  print413.txt  print4132.txt  print421.txt  print422.txt  print4232.txt  program.py  recursion.py  rules.py
copcode/bmstu_cc/course_work/: README.md  auto_start.py  executor.py  llvm_ir.py
(+57 files in other folders)
